# serializer version: 1
# name: TestPlan.test_new
  dict({
    'id': UUID,
    'segments': list([
      dict({
        'id': UUID,
        'length': 100,
        'length_tolerance': 0.01,
        'name': dict({
          'key': 'A',
          'prefix': 'DNA',
        }),
        'rule': 'required',
      }),
      dict({
        'id': UUID,
        'length': 200,
        'length_tolerance': 0.02,
        'name': dict({
          'key': 'B',
          'prefix': 'DNA',
        }),
        'rule': 'required',
      }),
    ]),
  })
# ---
# name: TestPlan.test_ok
  dict({
    'id': UUID,
    'segments': list([
      dict({
        'id': UUID,
        'length': 100,
        'length_tolerance': 0.01,
        'name': None,
        'rule': 'required',
      }),
    ]),
  })
# ---
